[package]
name = "local-sync"
version = "0.0.1"
description = "Non-threadsafe data structure for async usage"
authors = ["ihciah <ihciah@gmail.com>"]
repository = "https://github.com/ihciah/local-sync"
keywords = ["sync", "mpsc", "channel", "local", "futures", "local-channel"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
local-waker = "0.1"

[dev-dependencies]
frosty = { git = "https://code.byted.org/rust-lang/frosty", features=["macros"] }
