[package]
name = "local-sync"
version = "0.1.1"
description = "Non-threadsafe data structure for async usage"
authors = ["ihciah <ihciah@gmail.com>"]
repository = "https://github.com/ihciah/local-sync"
keywords = ["sync", "channel", "local", "futures", "local-channel"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
monoio = { version = "0.1.0", features = ["macros"] }
